--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -82,3 +82,65 @@ form input[type=text] {
 .spinner img {
     padding: 10px;
 }
+
+.messageBlock{
+    background: #CCC;
+    font: bold;
+    margin: 5px;
+    padding: 5px;
+    float: left;
+    width: 100%;
+}
+
+.username {
+    float:left;
+}
+
+.message {
+  clear: left;
+  float:left;
+}
+
+#chats, #main{
+  overflow: auto;
+
+}
+
+input {
+  width : 70%;
+  padding: 5px;
+  font-size: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  transition: border-color ease-in-out .10s, box-shadow ease-in-out .10s;
+  line-height: 1.42;
+}
+
+input:focus {
+  border-color: #66afe9;
+  outline: 0;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+.sendChat{
+  float: right;
+  margin: 5px 0;
+  color: #fff;
+  background-color: #0A87F5;
+  display: inline-block;
+  padding: 6px 12px;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 1.42;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid #55acee;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.sendChat:hover{
+  background-color: #2166a2;
+  border-color: #4287bb;
+}
