--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -46,18 +46,6 @@ body {
     line-height: 13px;
 }
 
-form {
-    padding: 20px;
-    padding-left: 0;
-    margin-bottom: 20px;
-}
-
-form input[type=text] {
-    margin-right: 10px;
-    width: 70%;
-    font-size: 12px;
-    padding: 5px;
-}
 
 .chat {
     padding: 5px;
@@ -92,6 +80,10 @@ form input[type=text] {
     width: 100%;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 .username {
     float:left;
 }
@@ -106,18 +98,27 @@ form input[type=text] {
 
 }
 
-input {
-  width : 70%;
-  padding: 5px;
-  font-size: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-  transition: border-color ease-in-out .10s, box-shadow ease-in-out .10s;
-  line-height: 1.42;
+
+form {
+    padding: 20px;
+    padding-left: 0;
+    margin-bottom: 20px;
 }
 
-input:focus {
+form input[type=text] {
+    margin-right: 10px;
+    width: 70%;
+    width : 70%;
+    padding: 5px;
+    font-size: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    transition: border-color ease-in-out .10s, box-shadow ease-in-out .10s;
+    line-height: 1.42;
+}
+
+form input:focus {
   border-color: #66afe9;
   outline: 0;
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
