--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -20,6 +20,7 @@ body {
     font-size: 35px;
     margin-bottom: 5px;
     padding: 5px;
+    text-align: center;
 }
 
 #main h1 span {
@@ -98,6 +99,9 @@ body {
 
 }
 
+#loading{
+  display:none;
+}
 
 form {
     padding: 20px;
@@ -107,8 +111,7 @@ form {
 
 form input[type=text] {
     margin-right: 10px;
-    width: 70%;
-    width : 70%;
+    width : 69%;
     padding: 5px;
     font-size: 12px;
     border: 1px solid #ccc;
@@ -124,8 +127,8 @@ form input:focus {
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 }
 
-.sendChat{
-  float: right;
+form input[type=submit]{
+  width :25%;
   margin: 5px 0;
   color: #fff;
   background-color: #0A87F5;
@@ -141,7 +144,20 @@ form input:focus {
   text-decoration: none;
 }
 
-.sendChat:hover{
+form input[type:submit]:hover{
   background-color: #2166a2;
   border-color: #4287bb;
+}
+
+#rooms {
+  margin : 4px 0;
+  padding: 2px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+select {
+  width : 50%;
+  margin: 4px;
+  font-weight: bold;
 }
